--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-app",
+  "name": "course-graph",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "d3": "^7.7.0",
+    "d3": "5.5",
     "react": "^18.2.0",
     "react-d3-graph": "^2.6.0",
     "react-dom": "^18.2.0",
